# modern-data-warehouse-dataops

./: .gitignore  .markdownlinkcheck.json  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  README.md  SECURITY.md  azure-pipelines.yml  dependabot.yml  env_vars.sh  linkspector.yml  pyproject.toml
.devcontainer/: .envtemplate  Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md  copilot-readme.md  dependabot.yml  readme.md
.github/ISSUE_TEMPLATE/: EngineeringFundChecklist.md  (+15 more)
Hackaton/: Helper_.py  ScanAPIs_Execution.ipynb  Workspace_Metadata.py
archive/: README.md
docs/: Observability_using_OpenTelemetry.md  linting-guide.md  parking_sensors_troubleshooting.md  pre_commit_guide.md
e2e_samples/config_driven_data_pipelines/: .coveragerc  .gitignore  GitVersion.yml  README.md  fruitappdemo.pbix  setup.cfg  setup.py
e2e_samples/config_driven_data_pipelines/.devcontainer/: Dockerfile  devcontainer.json
e2e_samples/config_driven_data_pipelines/dev/: README.md
e2e_samples/config_driven_data_pipelines/dev/scripts/: install.bat  setup_env.bat
e2e_samples/config_driven_data_pipelines/docs/: Logging.md
e2e_samples/config_driven_data_pipelines/notebooks/: fruitappdemo.pbix
e2e_samples/config_driven_data_pipelines/notebooks/python/: control_batch_jobs.py  control_stream_jobs.py  onboarding.py
e2e_samples/config_driven_data_pipelines/notebooks/sql/: create_config_tables.sql
e2e_samples/config_driven_data_pipelines/src/: README.md  _version.py  pytest.ini  requirements.txt  requirements_dev.txt  test.ps1
e2e_samples/config_driven_data_pipelines/src/cddp_solution/: setup.cfg
e2e_samples/config_driven_data_pipelines/src/cddp_solution/app_template/simple_template_app/: curation_data_export.py  event_data_curation.py  event_data_transform.py  master_data_curation.py  master_data_ingestion.py  master_data_transform.py  setup.cfg
e2e_samples/config_driven_data_pipelines/src/cddp_solution/app_template/simple_template_app_customers/customer_1/: README.md  config.json  event_data_schema.py  raw_data_schema.py
e2e_samples/config_driven_data_pipelines/src/cddp_solution/app_template/simple_template_app_customers/customer_1/raw_data/: data_1.csv
e2e_samples/config_driven_data_pipelines/src/cddp_solution/app_template/simple_template_app_customers/customer_1/raw_data/mock_events/: events.json
e2e_samples/config_driven_data_pipelines/src/cddp_solution/common/: curation_data_export.py  curation_data_export_runner.py  event_data_curation.py  event_data_curation_runner.py  event_data_transformation.py  event_data_transformation_runner.py  master_data_curation.py  master_data_curation_runner.py  master_data_ingestion.py  master_data_ingestion_runner.py  master_data_transformation.py  master_data_transformation_runner.py
e2e_samples/config_driven_data_pipelines/src/cddp_solution/common/export/: export_csv.py  export_job.py  export_postgresql.py
e2e_samples/config_driven_data_pipelines/src/cddp_solution/common/utils/: CddpException.py  Config.py  DataProcessingPhase.py  Logger.py  create_pipeline_from_template.py  custom_function.py  data_schema.py  env.py  merge_to_scd2.py  module_helper.py  onboarding.py  parquet_to_csv.py  publish_event_data.py  scd2.py  schema_compare.py  sink_data_helper.py  spark_job.py  spark_log4j_handler.py  utility.py
e2e_samples/config_driven_data_pipelines/tests/: README.md  conftest.py
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app/: curation_data_export.py  event_data_curation.py  event_data_transform.py  master_data_curation.py  master_data_ingestion.py  master_data_transform.py  pyproject.toml  setup.cfg
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/: setup.cfg  setup.py  test_01_master_data_ingestion.py  test_02_master_data_transformation.py  test_03_1_master_data_curation.py  test_03_event_data_transformation.py  test_04_master_data_curation.py  test_05_event_data_curation.py  test_06_curation_data_export.py  test_06_event_data_curation.py  test_07_curation_data_export.py
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/customer_1/: config.json  master_replay_pre_check.py  setup.cfg
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/customer_2/: config.json  dashboard.pbix  event_data_curation.py  event_data_schema.py  event_transformation.py  master_curation.py  master_data_replay_pre_check.py  master_transformation.py  raw_data_schema.py  setup.cfg
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/customer_2/master_data/: fruits.csv
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/customer_2/master_data/fruits.parquet/: part-00000-tid-fruits-0-1-c000.snappy.parquet  part-00001-tid-fruits-1-1-c000.snappy.parquet  part-00002-tid-fruits-2-1-c000.snappy.parquet
e2e_samples/config_driven_data_pipelines/tests/cddp_fruit_app_customers/customer_2/mock_events/events_1/: events.json
e2e_samples/config_driven_data_pipelines/tests/cddp_solution/common/: test_config.py  test_logger.py  test_merge_to_scd2.py  test_scd2.py  test_schema_compare.py
e2e_samples/config_driven_data_pipelines/tests/utils/: test_utils.py
e2e_samples/parking_sensors_synapse/src/ddo_transform/: Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
e2e_samples/parking_sensors_synapse/src/ddo_transform/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
e2e_samples/parking_sensors_synapse/src/ddo_transform/data/: MelbParkingBayData.json  MelbParkingSensorData.json  dim_st_marker.json  interim_parking_bay.json
e2e_samples/parking_sensors_synapse/src/ddo_transform/ddo_transform/: __init__.py  standardize.py  transform.py  util.py
e2e_samples/parking_sensors_synapse/src/ddo_transform/tests/: test_standardize.py  test_transform.py
factory/: mdwdops-adf-dev-parking.json
linkedService/: Ls_AdlsGen2_01.json  Ls_AzureDatabricks_01.json  Ls_KeyVault_01.json
parking_sensors/: README.md
pipeline/: P_Ingest_MelbParkingData.json
(+2610 files in other folders)
