[project]
name = "modern_data_estate"
version = "0.1.0"
description = "Modern Data Estate"
authors = [{ name = "Microsoft ISE Data Tech Domain", email = "your.email@example.com" }]

dependencies = ["pandas", "numpy"]

[project.optional-dependencies]
code_qa = ["black", "isort", "ruff", "yamllint", "nbqa", "pre-commit"]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]

dev = ["modern_data_estate[code_qa, test, release]" , "ipykernel"]
ci = ["modern_data_estate[test]", "pre-commit"]
cd = ["modern_data_estate[release]"]


[tool.isort]
profile = "black"
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
    | \.venv
    | archive
    | e2e_samples/parking_sensors_synapse
    | e2e_samples/parking_sensors
    | single_tech_samples
)/
'''
extend-exclude = ".*/*.ipynb|.*/*.xls"


[tool.ruff]
lint.select = ["E", "F", "B"]
# lint.ignore = ["E501"]
lint.fixable = ["E", "F", "B"]
line-length = 120
target-version = "py311"
exclude = ["*.ipynb", "archive/*",
            "old_and_archived_samples/*",
            "e2e_samples/parking_sensors_synapse/*",
            "e2e_samples/parking_sensors/*",
            "single_tech_samples/*"]
builtins = ["mssparkutils", "spark", "display"]


[tool.nbqa]
# [tool.nbqa.files]  # include only below folders
# black = "^e2e_samples/fabric_dataops_sample/"
# ruff = "^e2e_samples/fabric_dataops_sample/"
# isort = "^e2e_samples/fabric_dataops_sample/"


# not supported yet
# [tool.yamllint]
# config-file = "yamllint.yaml"

# not supported yet
# [tool.markdownlint]
# config = "markdownlint.yml"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
disable_error_code = ["name-defined"]
exclude = [".venv"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["e2e_samples", "archive", "single_tech_samples"]
