[metadata]
name = config_driven_data_pipelines
version = attr: _version.__version__
url = https://cddp
author = cddp
description = cddp code base
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    "Programming Language :: Python :: 3"
    "License :: OSI Not Approved :: cddp"
    "Operating System :: OS Independent"

[options]
package_dir =
    cddp_solution = src/cddp_solution
    cddp_fruit_app = tests/cddp_fruit_app
    cddp_fruit_app_customers = tests/cddp_fruit_app_customers
    cddp_flower = src/cddp_flower_app
    cddp_flower_customers = src/cddp_flower_app_customers
install_requires =
    pyspark==3.2.1
    delta-spark==1.2.1
    python-dotenv
    pyarrow
    fastparquet    
    pytest
    pytest-cov
    build
    psycopg2
    mock
python_requires = >=3.7
include_package_data = True

[options.package_data]
* = *.csv, *.json

[flake8]
max-line-length=120

[aliases] 
test=pytest
[tool:pytest]
addopts = --verbose --cov-branch

[options.entry_points]
console_scripts = 
    master_data_ingest = cddp_solution.common.master_data_ingestion_runner:main
    master_data_transform = cddp_solution.common.master_data_transformation_runner:main
    event_data_transform = cddp_solution.common.event_data_transformation_runner:main