[metadata]
name = cddp_solution
version = attr: _version.__version__
long_description = "cddp framework"
long_description_content_type = text/markdown

[options]
package_dir =
    cddp_solution = .
zip_safe = True
include_package_data = True
install_requires =
    pyspark==3.2.1
    pandas==1.3.2
    python-dotenv

[flake8]
max-line-length=120

[options.entry_points]
console_scripts = 
    master_data_ingest = cddp_solution.common.master_data_ingestion_runner:main
    master_data_transform = cddp_solution.common.master_data_transformation_runner:main
    master_data_curation = cddp_solution.common.master_data_curation_runner:main
    event_data_transform = cddp_solution.common.event_data_transformation_runner:main
    event_data_curation = cddp_solution.common.event_data_curation_runner:main