[metadata]
name = cddp_fruit_app
version = attr: _version.__version__
long_description = "cddp fruit_app template sample"
long_description_content_type = text/markdown

[options]
package_dir =
    cddp_fruit_app = .
zip_safe = True
include_package_data = True

[flake8]
max-line-length=120