[metadata]
name = cddp_fruit_app_customers
version = attr: _version.__version__
long_description = "cddp fruit_app customers"
long_description_content_type = text/markdown

[options]
package_dir =
    cddp_fruit_app_customers = .
zip_safe = True
include_package_data = True

[options.package_data]
* = *.csv, *.json

[flake8]
max-line-length=120