[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = --ignore=setup.py

[metadata]
# Sourcing the version
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
version = attr: ddo_transform.__version__
