[metadata]
name = cddp_fruit_app_customers.customer_2
keywords = cddp_fruit_app, customer_2
version = 0.0.1

[options]
package_dir =
    cddp_fruit_app_customers.customer_2 = .
zip_safe = True
include_package_data = True

[options.package_data]
* = *.csv, *.json

[options.extras_require]
dev =
    flake8>=3.9.2
test =
    pytest>=6.2.4

[flake8]
max-line-length=120